@@ -245,3 +245,4 @@ Dieter Van de Walle
 Jan Lipphaus
 Erik Welch
 Nik Soggia
+Olli Hauer
